added remove_dups function to SuperDuper

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ __pycache__/sqlizer.cpython-37.pyc
 toolbelt_workspace.code-workspace
 .vscode/settings.json
 __pycache__/SuperDuper.cpython-37.pyc
+__pycache__/FileFriend.cpython-38.pyc
+__pycache__/sqlizer.cpython-38.pyc
+__pycache__/SuperDuper.cpython-38.pyc
